--- a/content/_variables.scss
+++ b/content/_variables.scss
@@ -18,7 +18,7 @@ $shadow-text: 0 1px 0 rgba(0, 0, 0, 0.4);
 	border: 1px solid $base;
 	border-radius: 4px;
 	background-color: $base;
-	transition: color 200ms, border-color 200ms, background-color 200ms, color 200ms;
+	transition: color 200ms, border-color 200ms, background-color 200ms;
 	cursor: pointer;
 
 	&:hover {
